<resources>
    <string name="app_name">Bookopedia</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="cover">cover</string>
    <string name="menu_search">Search</string>
    <string name="publisher">Publisher: %1$s</string>
    <string name="page_count">Pages: %1$d</string>
    <string name="to_read_button">Want to Read</string>
    <string name="menu_home">Home</string>
    <string name="books_to_read">Books To Read</string>
    <string name="label_to_read">Books to Read</string>
    <string name="added_on">Added on: %1$s</string>
    <string name="clear_books">Clear books</string>
    <string name="delete_book">Delete book</string>
    <string name="notes_hint">Enter your book notes here.</string>
    <string name="btnAddNotes">Add notes</string>
    <string name="notesLabel">Notes</string>
    <string name="tvNotes">No notes yet. Add notes by clicking on the Add notes button.</string>
    <string name="notes_dialog_message">Enter your notes here:</string>
    <string name="user_login">User Login</string>
    <string name="email_hint">Enter e-mail</string>
    <string name="password_hint">Choose a password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Sign me up!</string>
    <string name="user_registration">User Registration</string>
    <string name="username_hint">Create a username</string>
    <string name="county_hint">Enter county</string>
    <string name="logout">Log out</string>
    <string name="login_pass_hint">Enter password</string>
    <string name="book_added">Added to list</string>
    <string name="welcome_message">Welcome to Bookopedia!\n\nMake a book query by using\nthe search icon above :)\n\n\nTRY THE BARCODE SCANNER!</string>
    <string name="no_results">No results found.\nSorry for the inconvenience.</string>
    <string name="google_sign_in">Google Sign-in</string>
    <string name="title_map">Book Map</string>
    <string name="google_maps_key">AIzaSyAlBLpqbGKcEEsCH8rU_xhq-hze7vzGcFg</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="counties">
        <item>Antrim</item>
        <item>Armagh</item>
        <item>Cavan</item>
        <item>Clare</item>
        <item>Cork</item>
        <item>Derry</item>
        <item>Donegal</item>
        <item>Down</item>
        <item>Dublin</item>
        <item>Fermanagh</item>
        <item>Galway</item>
        <item>Kerry</item>
        <item>Kildare</item>
        <item>Kilkenny</item>
        <item>Laois</item>
        <item>Leitrim</item>
        <item>Limerick</item>
        <item>Longford</item>
        <item>Louth</item>
        <item>Mayo</item>
        <item>Meath</item>
        <item>Monaghan</item>
        <item>Offaly</item>
        <item>Roscommon</item>
        <item>Sligo</item>
        <item>Tipperary</item>
        <item>Tyrone</item>
        <item>Waterford</item>
        <item>Westmeath</item>
        <item>Wexford</item>
        <item>Wicklow</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_wishlist">Wish List</string>
</resources>
