<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ie.bask.activities.BookListActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_to_read"
        android:icon="@drawable/ic_to_read"
        android:title="@string/books_to_read"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear"
        android:title="@string/clear_books"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_book"
        app:showAsAction="ifRoom" />

</menu>
