<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.bask.activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_login"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/login_pass_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonLogin"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/roundcorners"
            android:backgroundTint="#cd6ea916"
            android:text="@string/login_button"
            android:textColor="@color/md_white_1000" />

        <Button
            android:id="@+id/buttonRegister"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/roundcorners"
            android:backgroundTint="#cd6ea916"
            android:text="@string/register_button"
            android:textColor="@color/md_white_1000" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:max="100"
        android:visibility="gone" />

</RelativeLayout>

