<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivBookCover"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/cover" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_toEndOf="@+id/ivBookCover"
        android:text="@string/title"
        android:textSize="25sp"
        android:textColor="@color/md_black_1000" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/ivBookCover"
        android:text="@string/author"
        android:textSize="20sp"
        android:textColor="@color/md_black_1000" />

    <TextView
        android:id="@+id/tvDateAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAuthor"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/ivBookCover"
        android:textSize="18sp" />
</RelativeLayout>
